fixed bad zIndex for modals (which were not visible)

--- a/sass/partials/icon-picker.scss
+++ b/sass/partials/icon-picker.scss
@@ -92,3 +92,7 @@
   }
 
 }
+//This moves the modal from tbe background to the foreground so that it is actually visible
+.ui-front{
+  z-index: 9999 !important;
+}
